# johnny-moon-trader-bot

./: .dockerignore  .gitignore  .markdownlint.json  Dockerfile  Makefile  README.md  buibui.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: docker-build.yaml  docker-build.yml  lint.yaml  lint_markdown.yaml  python-tests.yml  telegram_monitor.yaml
config/: coins.json
monitor/: position_lib.py  position_monitor.py  price_lib.py  price_monitor.py
tests/: test_position_lib.py  test_price_lib.py  test_telegram.py
utils/: config_validation.py  indicators.py  telegram.py
